--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,8 @@
-name = "7eam"
-main = "src/index.js"
-compatibility_date = "2025-12-14"
+{
+  "name": "7eam",
+  "main": "main.js",
+  "compatibility_date": "2025-12-16",
+  "assets": {
+    "directory": "."
+  }
+}
