--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,9 +1,28 @@
+
 {
   "name": "7eam",
-  "compatibility_date": "2025-12-16",
   "main": "main.js",
+  "compatibility_date": "2025-12-16",
+
   "assets": {
     "directory": "./public"
+  },
+
+  "observability": {
+    "enabled": false,
+    "head_sampling_rate": 1,
+
+    "logs": {
+      "enabled": true,
+      "head_sampling_rate": 1,
+      "persist": true,
+      "invocation_logs": true
+    },
+
+    "traces": {
+      "enabled": true,
+      "persist": true,
+      "head_sampling_rate": 1
+    }
   }
 }
- 
